Fix - images overflow axis y - ProfileToysList

--- a/cd2024bfs3g1-frontend/src/main/ngx/src/app/main/profile/profile.component.css
+++ b/cd2024bfs3g1-frontend/src/main/ngx/src/app/main/profile/profile.component.css
@@ -16,6 +16,7 @@
     min-height: 150px;
     max-width: 150px;
     max-height: 150px;
+    height: 150px;
 }
 
 .mat-card-actions-buttons {
